<resources>
    <string name="app_name">단어 퀘스트</string>
    <string name="game_title">게임으로 배우는 영어 단어</string>

    <!-- 메인 네비게이션 / 프래그먼트 -->
    <string name="nav_start">시작</string>
    <string name="nav_learn">학습</string>
    <string name="nav_review">복습</string>
    <string name="nav_game">게임</string>

    <!-- UI 라벨 -->
    <string name="consecutive_days">연속 학습일: %1$d일</string>
    <string name="stage_format">스테이지 %1$d</string>
    <string name="wrong_answer_note">오답 노트</string>
    <string name="mini_game">미니게임</string>
    <string name="review_empty">틀린 단어가 없습니다.\n완벽해요!</string>
    <string name="wrong_count_format">%1$d회 틀림</string>
    <string name="no_words_found">스테이지 %1$d에 단어가 없습니다.</string>
    <string name="study_progress_format">%1$d/%2$d</string>
    <string name="default_wrong_count">0회 틀림</string>
    <string name="score_format">SCORE: %1$d</string>
    <string name="final_score_format">Score: %1$d</string>
    <string name="best_score_format">Best: %1$d</string>

    <!-- 버튼 및 액션 -->
    <string name="default_korean_meaning">뜻 값 비어있음</string>
    <string name="start">시작하기</string>
    <string name="settings">설정</string>
    <string name="close">닫기</string>
    <string name="test_start">테스트 시작</string>

    <!-- 설정 다이얼로그 -->
    <string name="back">뒤로가기</string>
    <string name="master_volume">전체 볼륨</string>
    <string name="bgm_volume">배경 음악 볼륨</string>
    <string name="sfx_volume">효과음 볼륨</string>
    <string name="vibration">진동</string>
    <string name="fps">FPS</string>
    <string name="fps_60">60FPS</string>
    <string name="fps_120">120FPS</string>
    <string name="fps_180">180FPS</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="default_stage_number">스테이지 없음</string>
    <string name="default_english_meaning">단어 값 비어있음</string>

    <!-- 게임/배틀 관련 -->
    <string name="battle_mission">배틀 미션</string>
    <string name="select_word_range">학습할 단어 범위를 선택하세요</string>
    <string name="start_mission">게임 시작</string>
    <string name="day_label">DAY</string>
    <string name="day_format">DAY %1$d</string>
    <string name="day_words_format">Day %1$d 단어들</string>
    <string name="unknown_answer">미확인</string>
    <string name="click_to_see_meaning">뜻 표시</string>
    <string name="loading_data">데이터를 불러오는 중입니다. 잠시만 기다려주세요.</string>
    <string name="no_words_in_range">선택한 범위에 단어가 없습니다.</string>
    <string name="restart">다시하기</string>
    <string name="exit_game">그만두기</string>
    <string name="date_format">yyyy년 MM월 dd일 E요일</string>
    <string name="game_over">게임 오버</string>
    <string name="audio_settings">오디오 설정</string>
    <string name="bgm_selection">배경음악 선택</string>
    <string name="main_bgm">메인 배경음악</string>
    <string name="game_bgm">게임 배경음악</string>
    <string name="track_1">트랙 1</string>
    <string name="track_2">트랙 2</string>
    <string name="track_3">트랙 3</string>
    <string name="graphics_settings">그래픽 설정</string>
    <string name="no_words_available">학습 가능한 단어가 없습니다.</string>
    <string name="countdown_start">START!</string>
    <string name="wrong_count_x_format">X %1$d</string>
    <string name="number_format">%1$d</string>
    <string name="reset_wrong_count">오답 기록 초기화</string>
    <string name="reset_complete">오답 기록이 모두 초기화되었습니다.</string>
</resources>
